--- a/robot-bridge/mbed_app.json
+++ b/robot-bridge/mbed_app.json
@@ -9,5 +9,7 @@
             "platform.minimal-printf-set-floating-point-max-decimals": 6
         }
     },
-    "macros": ["MBED_ALL_STATS_ENABLED", "MBED_CONF_PLATFORM_ERROR_FILENAME_CAPTURE_ENABLED=1"]
+    "macros": [
+        "MBED_MINIMAL_PRINTF"
+    ]
 }
