--- a/robot1-main/.vscode/settings.json
+++ b/robot1-main/.vscode/settings.json
@@ -6,7 +6,8 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-    ".mbed": "*.lib, mbed_app.json, mbed_settings.py"
+    ".mbed": "*.lib, mbed_app.json, mbed_settings.py",
+    "Makefile": "compile_commands.json, mbed_config.h"
   },
   "sonarlint.pathToCompileCommands": "${workspaceFolder}/compile_commands.json"
 }
