--- a/robot-bridge/.vscode/settings.json
+++ b/robot-bridge/.vscode/settings.json
@@ -6,6 +6,7 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-    ".mbed": "*.lib, mbed_app.json, mbed_settings.py"
+    ".mbed": "*.lib, mbed_app.json, mbed_settings.py",
+    "Makefile": "compile_commands.json, mbed_config.h"
   }
 }
