Update: Remove template code

--- a/connection-test/Makefile
+++ b/connection-test/Makefile
@@ -998,10 +998,7 @@ OBJECTS += ./mbed-os/targets/TARGET_STM/stm_spi_api.o
 OBJECTS += ./mbed-os/targets/TARGET_STM/trng_api.o
 OBJECTS += ./mbed-os/targets/TARGET_STM/us_ticker.o
 OBJECTS += ./mbed-os/targets/TARGET_STM/watchdog_api.o
-OBJECTS += ./src/app.o
-OBJECTS += ./src/communication.o
 OBJECTS += ./src/main.o
-OBJECTS += ./src/project/driving_can.o
 OBJECTS += ./syoch-robotics/mbed-robotics/bno055_node.o
 OBJECTS += ./syoch-robotics/mbed-robotics/ikako_c620.registry.o
 OBJECTS += ./syoch-robotics/mbed-robotics/ikako_mdc.o
@@ -1360,8 +1357,6 @@ INCLUDE_PATHS += -I.././mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F4
 INCLUDE_PATHS += -I.././mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F446xE/TARGET_NUCLEO_F446RE
 INCLUDE_PATHS += -I.././nhk2023-b
 INCLUDE_PATHS += -I.././nhk2023-b/nhk2023-b
-INCLUDE_PATHS += -I.././src
-INCLUDE_PATHS += -I.././src/project
 INCLUDE_PATHS += -I.././syoch-robotics
 INCLUDE_PATHS += -I.././syoch-robotics/mbed-robotics
 INCLUDE_PATHS += -I.././syoch-robotics/robotics
@@ -1400,62 +1395,62 @@ C_FLAGS += -g3
 C_FLAGS += -std=gnu11
 C_FLAGS += -include
 C_FLAGS += mbed_config.h
-C_FLAGS += -D__CMSIS_RTOS
-C_FLAGS += -DTRANSACTION_QUEUE_SIZE_SPI=2
-C_FLAGS += -D__FPU_PRESENT=1
-C_FLAGS += -DDEVICE_PORTOUT=1
-C_FLAGS += -DMBED_BUILD_TIMESTAMP=1715342942.1040256
-C_FLAGS += -DTARGET_MCU_STM32F446xE
-C_FLAGS += -DDEVICE_PORTINOUT=1
-C_FLAGS += -DDEVICE_LPTICKER=1
-C_FLAGS += -DTARGET_LIKE_MBED
-C_FLAGS += -DDEVICE_SERIAL=1
-C_FLAGS += -DDEVICE_SPI_ASYNCH=1
-C_FLAGS += -DDEVICE_RTC=1
-C_FLAGS += -DTARGET_MCU_STM32F4
-C_FLAGS += -DDEVICE_SPISLAVE=1
-C_FLAGS += -DTARGET_CORTEX
-C_FLAGS += -DDEVICE_PORTIN=1
-C_FLAGS += -DDEVICE_SERIAL_FC=1
-C_FLAGS += -D__MBED__=1
-C_FLAGS += -DDEVICE_I2C=1
-C_FLAGS += -DDEVICE_RESET_REASON=1
-C_FLAGS += -DTOOLCHAIN_GCC
-C_FLAGS += -DTARGET_RELEASE
-C_FLAGS += -DTARGET_FF_ARDUINO_UNO
-C_FLAGS += -DDEVICE_I2CSLAVE=1
 C_FLAGS += -DDEVICE_SLEEP=1
-C_FLAGS += -DTARGET_MCU_STM32
-C_FLAGS += -DTARGET_STM32F446xE
-C_FLAGS += -DDEVICE_I2C_ASYNCH=1
-C_FLAGS += -DARM_MATH_CM4
-C_FLAGS += -DDEVICE_FLASH=1
-C_FLAGS += -DDEVICE_USTICKER=1
-C_FLAGS += -DCOMPONENT_FLASHIAP=1
-C_FLAGS += -DDEVICE_SPI=1
-C_FLAGS += -DUSE_HAL_DRIVER
-C_FLAGS += -D__CORTEX_M4
-C_FLAGS += -DDEVICE_ANALOGIN=1
-C_FLAGS += -DDEVICE_ANALOGOUT=1
-C_FLAGS += -DDEVICE_INTERRUPTIN=1
-C_FLAGS += -DDEVICE_STDIO_MESSAGES=1
-C_FLAGS += -DUSE_FULL_LL_DRIVER
-C_FLAGS += -DDEVICE_WATCHDOG=1
-C_FLAGS += -DTARGET_M4
-C_FLAGS += -DTARGET_CORTEX_M
-C_FLAGS += -DTARGET_STM
-C_FLAGS += -DSTM32F446xx
-C_FLAGS += -DTARGET_NAME=NUCLEO_F446RE
-C_FLAGS += -DTARGET_LIKE_CORTEX_M4
-C_FLAGS += -DTARGET_NUCLEO_F446RE
-C_FLAGS += -D__MBED_CMSIS_RTOS_CM
-C_FLAGS += -DDEVICE_PWMOUT=1
 C_FLAGS += -DTARGET_STM32F4
-C_FLAGS += -DDEVICE_CAN=1
-C_FLAGS += -DDEVICE_MPU=1
-C_FLAGS += -DTOOLCHAIN_GCC_ARM
-C_FLAGS += -DTARGET_RTOS_M4_M7
+C_FLAGS += -DTARGET_NUCLEO_F446RE
+C_FLAGS += -DDEVICE_INTERRUPTIN=1
+C_FLAGS += -DDEVICE_PWMOUT=1
+C_FLAGS += -DARM_MATH_CM4
 C_FLAGS += -DDEVICE_SERIAL_ASYNCH=1
+C_FLAGS += -DTARGET_FF_ARDUINO_UNO
+C_FLAGS += -DDEVICE_I2C_ASYNCH=1
+C_FLAGS += -DDEVICE_SPI=1
+C_FLAGS += -DDEVICE_PORTIN=1
+C_FLAGS += -DTARGET_NAME=NUCLEO_F446RE
+C_FLAGS += -DDEVICE_SERIAL_FC=1
+C_FLAGS += -DUSE_FULL_LL_DRIVER
+C_FLAGS += -DDEVICE_RTC=1
+C_FLAGS += -DMBED_BUILD_TIMESTAMP=1715343692.765739
+C_FLAGS += -DDEVICE_WATCHDOG=1
+C_FLAGS += -DDEVICE_ANALOGOUT=1
+C_FLAGS += -DDEVICE_FLASH=1
+C_FLAGS += -DDEVICE_CAN=1
+C_FLAGS += -DDEVICE_I2CSLAVE=1
+C_FLAGS += -D__CORTEX_M4
+C_FLAGS += -D__MBED_CMSIS_RTOS_CM
+C_FLAGS += -DCOMPONENT_FLASHIAP=1
+C_FLAGS += -DDEVICE_LPTICKER=1
+C_FLAGS += -D__FPU_PRESENT=1
+C_FLAGS += -DDEVICE_SPI_ASYNCH=1
+C_FLAGS += -D__CMSIS_RTOS
+C_FLAGS += -DTOOLCHAIN_GCC_ARM
+C_FLAGS += -DTRANSACTION_QUEUE_SIZE_SPI=2
+C_FLAGS += -DDEVICE_STDIO_MESSAGES=1
+C_FLAGS += -DTARGET_RTOS_M4_M7
+C_FLAGS += -DDEVICE_SERIAL=1
+C_FLAGS += -DTARGET_MCU_STM32F446xE
+C_FLAGS += -DTARGET_LIKE_CORTEX_M4
+C_FLAGS += -DTARGET_LIKE_MBED
+C_FLAGS += -DDEVICE_SPISLAVE=1
+C_FLAGS += -D__MBED__=1
+C_FLAGS += -DTARGET_MCU_STM32
+C_FLAGS += -DDEVICE_RESET_REASON=1
+C_FLAGS += -DTARGET_STM
+C_FLAGS += -DDEVICE_ANALOGIN=1
+C_FLAGS += -DDEVICE_PORTINOUT=1
+C_FLAGS += -DDEVICE_I2C=1
+C_FLAGS += -DDEVICE_MPU=1
+C_FLAGS += -DTARGET_RELEASE
+C_FLAGS += -DDEVICE_PORTOUT=1
+C_FLAGS += -DTARGET_M4
+C_FLAGS += -DTARGET_CORTEX
+C_FLAGS += -DUSE_HAL_DRIVER
+C_FLAGS += -DTARGET_MCU_STM32F4
+C_FLAGS += -DTARGET_CORTEX_M
+C_FLAGS += -DSTM32F446xx
+C_FLAGS += -DDEVICE_USTICKER=1
+C_FLAGS += -DTARGET_STM32F446xE
+C_FLAGS += -DTOOLCHAIN_GCC
 C_FLAGS += -include
 C_FLAGS += mbed_config.h
 C_FLAGS += -c
@@ -1492,62 +1487,62 @@ CXX_FLAGS += -fno-rtti
 CXX_FLAGS += -Wvla
 CXX_FLAGS += -include
 CXX_FLAGS += mbed_config.h
-CXX_FLAGS += -D__CMSIS_RTOS
-CXX_FLAGS += -DTRANSACTION_QUEUE_SIZE_SPI=2
-CXX_FLAGS += -D__FPU_PRESENT=1
-CXX_FLAGS += -DDEVICE_PORTOUT=1
-CXX_FLAGS += -DMBED_BUILD_TIMESTAMP=1715342942.1040256
-CXX_FLAGS += -DTARGET_MCU_STM32F446xE
-CXX_FLAGS += -DDEVICE_PORTINOUT=1
-CXX_FLAGS += -DDEVICE_LPTICKER=1
-CXX_FLAGS += -DTARGET_LIKE_MBED
-CXX_FLAGS += -DDEVICE_SERIAL=1
-CXX_FLAGS += -DDEVICE_SPI_ASYNCH=1
-CXX_FLAGS += -DDEVICE_RTC=1
-CXX_FLAGS += -DTARGET_MCU_STM32F4
-CXX_FLAGS += -DDEVICE_SPISLAVE=1
-CXX_FLAGS += -DTARGET_CORTEX
-CXX_FLAGS += -DDEVICE_PORTIN=1
-CXX_FLAGS += -DDEVICE_SERIAL_FC=1
-CXX_FLAGS += -D__MBED__=1
-CXX_FLAGS += -DDEVICE_I2C=1
-CXX_FLAGS += -DDEVICE_RESET_REASON=1
-CXX_FLAGS += -DTOOLCHAIN_GCC
-CXX_FLAGS += -DTARGET_RELEASE
-CXX_FLAGS += -DTARGET_FF_ARDUINO_UNO
-CXX_FLAGS += -DDEVICE_I2CSLAVE=1
 CXX_FLAGS += -DDEVICE_SLEEP=1
-CXX_FLAGS += -DTARGET_MCU_STM32
-CXX_FLAGS += -DTARGET_STM32F446xE
-CXX_FLAGS += -DDEVICE_I2C_ASYNCH=1
-CXX_FLAGS += -DARM_MATH_CM4
-CXX_FLAGS += -DDEVICE_FLASH=1
-CXX_FLAGS += -DDEVICE_USTICKER=1
-CXX_FLAGS += -DCOMPONENT_FLASHIAP=1
-CXX_FLAGS += -DDEVICE_SPI=1
-CXX_FLAGS += -DUSE_HAL_DRIVER
-CXX_FLAGS += -D__CORTEX_M4
-CXX_FLAGS += -DDEVICE_ANALOGIN=1
-CXX_FLAGS += -DDEVICE_ANALOGOUT=1
-CXX_FLAGS += -DDEVICE_INTERRUPTIN=1
-CXX_FLAGS += -DDEVICE_STDIO_MESSAGES=1
-CXX_FLAGS += -DUSE_FULL_LL_DRIVER
-CXX_FLAGS += -DDEVICE_WATCHDOG=1
-CXX_FLAGS += -DTARGET_M4
-CXX_FLAGS += -DTARGET_CORTEX_M
-CXX_FLAGS += -DTARGET_STM
-CXX_FLAGS += -DSTM32F446xx
-CXX_FLAGS += -DTARGET_NAME=NUCLEO_F446RE
-CXX_FLAGS += -DTARGET_LIKE_CORTEX_M4
-CXX_FLAGS += -DTARGET_NUCLEO_F446RE
-CXX_FLAGS += -D__MBED_CMSIS_RTOS_CM
-CXX_FLAGS += -DDEVICE_PWMOUT=1
 CXX_FLAGS += -DTARGET_STM32F4
-CXX_FLAGS += -DDEVICE_CAN=1
-CXX_FLAGS += -DDEVICE_MPU=1
-CXX_FLAGS += -DTOOLCHAIN_GCC_ARM
-CXX_FLAGS += -DTARGET_RTOS_M4_M7
+CXX_FLAGS += -DTARGET_NUCLEO_F446RE
+CXX_FLAGS += -DDEVICE_INTERRUPTIN=1
+CXX_FLAGS += -DDEVICE_PWMOUT=1
+CXX_FLAGS += -DARM_MATH_CM4
 CXX_FLAGS += -DDEVICE_SERIAL_ASYNCH=1
+CXX_FLAGS += -DTARGET_FF_ARDUINO_UNO
+CXX_FLAGS += -DDEVICE_I2C_ASYNCH=1
+CXX_FLAGS += -DDEVICE_SPI=1
+CXX_FLAGS += -DDEVICE_PORTIN=1
+CXX_FLAGS += -DTARGET_NAME=NUCLEO_F446RE
+CXX_FLAGS += -DDEVICE_SERIAL_FC=1
+CXX_FLAGS += -DUSE_FULL_LL_DRIVER
+CXX_FLAGS += -DDEVICE_RTC=1
+CXX_FLAGS += -DMBED_BUILD_TIMESTAMP=1715343692.765739
+CXX_FLAGS += -DDEVICE_WATCHDOG=1
+CXX_FLAGS += -DDEVICE_ANALOGOUT=1
+CXX_FLAGS += -DDEVICE_FLASH=1
+CXX_FLAGS += -DDEVICE_CAN=1
+CXX_FLAGS += -DDEVICE_I2CSLAVE=1
+CXX_FLAGS += -D__CORTEX_M4
+CXX_FLAGS += -D__MBED_CMSIS_RTOS_CM
+CXX_FLAGS += -DCOMPONENT_FLASHIAP=1
+CXX_FLAGS += -DDEVICE_LPTICKER=1
+CXX_FLAGS += -D__FPU_PRESENT=1
+CXX_FLAGS += -DDEVICE_SPI_ASYNCH=1
+CXX_FLAGS += -D__CMSIS_RTOS
+CXX_FLAGS += -DTOOLCHAIN_GCC_ARM
+CXX_FLAGS += -DTRANSACTION_QUEUE_SIZE_SPI=2
+CXX_FLAGS += -DDEVICE_STDIO_MESSAGES=1
+CXX_FLAGS += -DTARGET_RTOS_M4_M7
+CXX_FLAGS += -DDEVICE_SERIAL=1
+CXX_FLAGS += -DTARGET_MCU_STM32F446xE
+CXX_FLAGS += -DTARGET_LIKE_CORTEX_M4
+CXX_FLAGS += -DTARGET_LIKE_MBED
+CXX_FLAGS += -DDEVICE_SPISLAVE=1
+CXX_FLAGS += -D__MBED__=1
+CXX_FLAGS += -DTARGET_MCU_STM32
+CXX_FLAGS += -DDEVICE_RESET_REASON=1
+CXX_FLAGS += -DTARGET_STM
+CXX_FLAGS += -DDEVICE_ANALOGIN=1
+CXX_FLAGS += -DDEVICE_PORTINOUT=1
+CXX_FLAGS += -DDEVICE_I2C=1
+CXX_FLAGS += -DDEVICE_MPU=1
+CXX_FLAGS += -DTARGET_RELEASE
+CXX_FLAGS += -DDEVICE_PORTOUT=1
+CXX_FLAGS += -DTARGET_M4
+CXX_FLAGS += -DTARGET_CORTEX
+CXX_FLAGS += -DUSE_HAL_DRIVER
+CXX_FLAGS += -DTARGET_MCU_STM32F4
+CXX_FLAGS += -DTARGET_CORTEX_M
+CXX_FLAGS += -DSTM32F446xx
+CXX_FLAGS += -DDEVICE_USTICKER=1
+CXX_FLAGS += -DTARGET_STM32F446xE
+CXX_FLAGS += -DTOOLCHAIN_GCC
 CXX_FLAGS += -include
 CXX_FLAGS += mbed_config.h
 CXX_FLAGS += -c
@@ -1583,15 +1578,15 @@ ASM_FLAGS += -c
 ASM_FLAGS += -g3
 ASM_FLAGS += -x
 ASM_FLAGS += assembler-with-cpp
-ASM_FLAGS += -DARM_MATH_CM4
-ASM_FLAGS += -D__CMSIS_RTOS
 ASM_FLAGS += -DTRANSACTION_QUEUE_SIZE_SPI=2
-ASM_FLAGS += -DSTM32F446xx
+ASM_FLAGS += -DUSE_FULL_LL_DRIVER
 ASM_FLAGS += -DUSE_HAL_DRIVER
-ASM_FLAGS += -D__FPU_PRESENT=1
 ASM_FLAGS += -D__CORTEX_M4
 ASM_FLAGS += -D__MBED_CMSIS_RTOS_CM
-ASM_FLAGS += -DUSE_FULL_LL_DRIVER
+ASM_FLAGS += -DSTM32F446xx
+ASM_FLAGS += -D__FPU_PRESENT=1
+ASM_FLAGS += -DARM_MATH_CM4
+ASM_FLAGS += -D__CMSIS_RTOS
 ASM_FLAGS += -I..
 ASM_FLAGS += -I../bno055
 ASM_FLAGS += -I../ikakoMDC
@@ -1937,8 +1932,6 @@ ASM_FLAGS += -I../mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F446xE
 ASM_FLAGS += -I../mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F446xE/TARGET_NUCLEO_F446RE
 ASM_FLAGS += -I../nhk2023-b
 ASM_FLAGS += -I../nhk2023-b/nhk2023-b
-ASM_FLAGS += -I../src
-ASM_FLAGS += -I../src/project
 ASM_FLAGS += -I../syoch-robotics
 ASM_FLAGS += -I../syoch-robotics/mbed-robotics
 ASM_FLAGS += -I../syoch-robotics/robotics
