--- a/.gitmodules
+++ b/.gitmodules
@@ -13,12 +13,9 @@
 [submodule "common_libs/ikarashiCAN_mk2"]
 	path = common_libs/ikarashiCAN_mk2
 	url = git@github.com:nnctroboticsclub/ikarashiCAN_mk2
-[submodule "common_libs/mbed-os"]
-	path = common_libs/mbed-os
-	url = git@github.com:ARMmbed/mbed-os
 [submodule "common_libs/ArduinoSTL"]
 	path = common_libs/ArduinoSTL
 	url = git@github.com:mike-matera/ArduinoSTL.git
-[submodule "common_libs/avr-libstdcpp"]
-	path = common_libs/avr-libstdcpp
-	url = git@github.com:modm-io/avr-libstdcpp.git
+[submodule "common_libs/mbed-os"]
+	path = common_libs/mbed-os
+	url = git@github.com:mbed-ce/mbed-os.git
