Update: Added some libs

--- a/controller-stm32/src/CMakeLists.txt
+++ b/controller-stm32/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(ControllerSTM32 main.cpp hcd.cpp hc.cpp)
+add_executable(ControllerSTM32 main.cpp hcd.cpp hc.cpp endpoint.cpp device.cpp)
 
 
 target_link_libraries(ControllerSTM32 PRIVATE mbed-os syoch-robotics)
