Update: Separated otg codes

--- a/controller-stm32/src/CMakeLists.txt
+++ b/controller-stm32/src/CMakeLists.txt
@@ -1,15 +1,31 @@
 #
-# cpp_usb_otg
+# usb_otg_packets
 #
-add_library(cpp_usb_otg STATIC)
-target_include_directories(cpp_usb_otg INTERFACE
-  .
+add_library(usb_otg_packets STATIC)
+target_include_directories(usb_otg_packets PUBLIC
+  usb_otg_packets
 )
-target_sources(cpp_usb_otg PRIVATE
-  otg/hcd.cpp otg/hc.cpp otg/endpoint.cpp otg/device.cpp
+target_sources(usb_otg_packets PRIVATE
+  usb_otg_packets/usb/hcd.cpp
+  usb_otg_packets/usb/hc.cpp
 )
-target_link_libraries(cpp_usb_otg PRIVATE
+target_link_libraries(usb_otg_packets PRIVATE
   mbed-os syoch-robotics
+)
+
+#
+# usb_otg_cpp
+#
+add_library(usb_otg_cpp STATIC)
+target_include_directories(usb_otg_cpp PUBLIC
+  usb_otg_cpp
+)
+target_sources(usb_otg_cpp PRIVATE
+  usb_otg_cpp/usb/endpoint.cpp
+  usb_otg_cpp/usb/device.cpp
+)
+target_link_libraries(usb_otg_cpp PRIVATE
+  mbed-os syoch-robotics usb_otg_packets
 )
 
 #
@@ -22,6 +38,6 @@ target_sources(ControllerSTM32 PRIVATE
 
 
 target_link_libraries(ControllerSTM32 PRIVATE
-  mbed-os syoch-robotics cpp_usb_otg
+  mbed-os syoch-robotics usb_otg_cpp usb_otg_packets
 )
 mbed_set_post_build(ControllerSTM32)
