--- a/controller-stm32/src/CMakeLists.txt
+++ b/controller-stm32/src/CMakeLists.txt
@@ -1,43 +1,21 @@
-#
-# usb_otg_packets
-#
-add_library(usb_otg_packets STATIC)
-target_include_directories(usb_otg_packets PUBLIC
-  usb_otg_packets
-)
-target_sources(usb_otg_packets PRIVATE
-  usb_otg_packets/usb/hcd.cpp
-  usb_otg_packets/usb/hc.cpp
-)
-target_link_libraries(usb_otg_packets PRIVATE
-  mbed-os syoch-robotics
-)
+add_subdirectory(wrapper)
+add_subdirectory(usb_otg_cpp)
+add_subdirectory(usb_otg_packets)
+add_subdirectory(usb_rs)
 
-#
-# usb_otg_cpp
-#
-add_library(usb_otg_cpp STATIC)
-target_include_directories(usb_otg_cpp PUBLIC
-  usb_otg_cpp
-)
-target_sources(usb_otg_cpp PRIVATE
-  usb_otg_cpp/usb/endpoint.cpp
-  usb_otg_cpp/usb/device.cpp
-)
-target_link_libraries(usb_otg_cpp PRIVATE
-  mbed-os syoch-robotics usb_otg_packets
-)
 
 #
 # ControllerSTM32
 #
 add_executable(ControllerSTM32)
 target_sources(ControllerSTM32 PRIVATE
-  main.cpp
+  app/main.cpp
 )
 
 
 target_link_libraries(ControllerSTM32 PRIVATE
-  mbed-os syoch-robotics usb_otg_cpp usb_otg_packets
+  mbed-os syoch-robotics usb_otg_packets usb_otg_cpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/usb_rs/target/thumbv7em-none-eabi/debug/libusb_rs.a
+  usb_rs
 )
 mbed_set_post_build(ControllerSTM32)
