--- a/controller-stm32/src/usb_rs/Cargo.toml
+++ b/controller-stm32/src/usb_rs/Cargo.toml
@@ -13,5 +13,10 @@ cortex-m-rt = "0.7.1"
 stm32f4xx-hal = { version = "0.17.1", features = ["stm32f446", "usb_fs"] }
 synopsys-usb-otg = { version = "0.4.0", features = ["hs", "cortex-m"]}
 
+[dependencies.nom]
+version = "7.1.3"
+default-features = false
+features = ["alloc"]
+
 [build-dependencies]
 bindgen = "0.65.1"
