--- a/robot-bridge/Makefile
+++ b/robot-bridge/Makefile
@@ -10,7 +10,7 @@ $(BUILD)/build.ninja: CMakeLists.txt src/CMakeLists.txt
 
 .PHONY: write
 write: build
-	st-flash --connect-under-reset --format ihex write $(BUILD)/src/ControllerSTM32.hex
+	st-flash --connect-under-reset --format ihex write $(BUILD)/src/app/app.hex
 
 .PHONY: clean
 clean:
