--- a/robot-bridge/.vscode/settings.json
+++ b/robot-bridge/.vscode/settings.json
@@ -1,27 +1,1 @@
-{
-  "explorer.fileNesting.patterns": {
-    "*.ts": "${capture}.js",
-    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
-    "*.jsx": "${capture}.js",
-    "*.tsx": "${capture}.ts",
-    "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-    ".mbed": "*.lib, mbed_app.json, mbed_settings.py",
-    "Makefile": "compile_commands.json, mbed_config.h"
-  },
-  "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
-    "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "bno055": true,
-    "ikakoMDC": true,
-    "IkakoRobomas": true,
-    "ikarashiCAN_mk2": true,
-    "MotorController": true,
-    "mbed-os": true,
-    "ikako_c620": true,
-  }
-}
+../../.vscode/settings.mbed.json
