--- a/robot1-main/.vscode/settings.json
+++ b/robot1-main/.vscode/settings.json
@@ -1,13 +1,1 @@
-{
-  "explorer.fileNesting.patterns": {
-    "*.ts": "${capture}.js",
-    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
-    "*.jsx": "${capture}.js",
-    "*.tsx": "${capture}.ts",
-    "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-    ".mbed": "*.lib, mbed_app.json, mbed_settings.py",
-    "Makefile": "compile_commands.json, mbed_config.h"
-  },
-  "sonarlint.pathToCompileCommands": "${workspaceFolder}/compile_commands.json"
-}
+../../.vscode/settings.mbed.json
