--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
 				"ms-python.python",
 				"ms-toolsai.jupyter",
 				"charliermarsh.ruff",
-				"mhutchie.git-graph"
+				"mhutchie.git-graph",
+				"rust-lang.rust-analyzer"
 			]
 		}
 	}
