--- a/.vscode/settings.mbed.json
+++ b/.vscode/settings.mbed.json
@@ -6,7 +6,6 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-    ".mbed": "*.lib, mbed_app.json, mbed_settings.py",
     "Makefile": "compile_commands.json, mbed_config.h"
   },
   "files.exclude": {
@@ -16,6 +15,9 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
+    ".mbed": true,
+    "mbed_settings.py": true,
+    "BUILD": true,
     "bno055": true,
     "ikakoMDC": true,
     "IkakoRobomas": true,
