--- a/.vscode/settings.mbed.json
+++ b/.vscode/settings.mbed.json
@@ -24,6 +24,7 @@
     "ikarashiCAN_mk2": true,
     "MotorController": true,
     "mbed-os": true,
-    "ikako_c620": true
+    "ikako_c620": true,
+    "can_servo": true,
   }
 }
