Update: vscode some

--- a/.vscode/settings.mbed.json
+++ b/.vscode/settings.mbed.json
@@ -16,6 +16,8 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
+    ".mbed": true,
+    "mbed_settings.py": true,
     "bno055": true,
     "ikakoMDC": true,
     "IkakoRobomas": true,
