--- a/robot-bridge/src/app/CMakeLists.txt
+++ b/robot-bridge/src/app/CMakeLists.txt
@@ -1,13 +1,11 @@
 add_executable(app)
 target_sources(app PRIVATE
-  app.cpp
-  communication.cpp
   main.cpp
-  project/driving_can.cpp
 )
 
 target_link_libraries(app PRIVATE
-  mbed-os syoch-robotics ikarashiCAN_mk2 MotorController IkakoRobomas ikarashiCAN_mk2 can_servo
+  mbed-os NHK2024B
+  syoch-robotics ikarashiCAN_mk2 MotorController IkakoRobomas ikarashiCAN_mk2 can_servo
 )
 
 mbed_set_post_build(app)
