--- a/robot-bridge/CMakeLists.txt
+++ b/robot-bridge/CMakeLists.txt
@@ -12,7 +12,7 @@ add_subdirectory(syoch-robotics)
 #
 # MotorController
 #
-add_library(MotorController STATIC)
+add_library(MotorController OBJECT)
 target_include_directories(MotorController PUBLIC
   ./MotorController
 )
@@ -34,7 +34,7 @@ target_link_libraries(MotorController PRIVATE
 #
 # IkakoRobomas
 #
-add_library(IkakoRobomas STATIC)
+add_library(IkakoRobomas OBJECT)
 target_include_directories(IkakoRobomas PUBLIC
   ./IkakoRobomas
 )
@@ -50,7 +50,7 @@ target_link_libraries(IkakoRobomas PRIVATE
 #
 # ikako_c620
 #
-add_library(ikako_c620 STATIC)
+add_library(ikako_c620 OBJECT)
 target_include_directories(ikako_c620 PUBLIC
   ./ikako_c620
 )
@@ -64,7 +64,7 @@ target_link_libraries(ikako_c620 PRIVATE
 #
 # bno055
 #
-add_library(bno055 STATIC)
+add_library(bno055 OBJECT)
 target_include_directories(bno055 PUBLIC
   ./bno055
 )
@@ -78,7 +78,7 @@ target_link_libraries(bno055 PRIVATE
 #
 # ikarashiCAN_mk2
 #
-add_library(ikarashiCAN_mk2 STATIC)
+add_library(ikarashiCAN_mk2 OBJECT)
 target_include_directories(ikarashiCAN_mk2 PUBLIC
   ./ikarashiCAN_mk2
   ./ikarashiCAN_mk2/NoMutexCAN-master
@@ -93,7 +93,7 @@ target_link_libraries(ikarashiCAN_mk2 PRIVATE
 #
 # can_servo
 #
-add_library(can_servo STATIC)
+add_library(can_servo OBJECT)
 target_include_directories(can_servo PUBLIC
   ./can_servo
 )
@@ -108,7 +108,7 @@ target_link_libraries(can_servo PRIVATE
 #
 # ikakoMDC
 #
-add_library(ikakoMDC STATIC)
+add_library(ikakoMDC OBJECT)
 target_include_directories(ikakoMDC PUBLIC
   ./ikakoMDC
   ./ikakoMDC/lpf
@@ -127,7 +127,7 @@ target_link_libraries(ikakoMDC PRIVATE
 #
 # PS4_RX
 #
-add_library(PS4_RX STATIC)
+add_library(PS4_RX OBJECT)
 target_include_directories(PS4_RX PUBLIC
   ./PS4_RX
 )
