--- a/robot-bridge/src/app/CMakeLists.txt
+++ b/robot-bridge/src/app/CMakeLists.txt
@@ -5,7 +5,8 @@ target_sources(app PRIVATE
 
 target_link_libraries(app PRIVATE
   mbed-os NHK2024B PS4_RX
-  syoch-robotics ikarashiCAN_mk2 MotorController IkakoRobomas ikarashiCAN_mk2 can_servo
+  syoch-robotics ikarashiCAN_mk2 MotorController
+  IkakoRobomas ikako_rohm_md can_servo
 )
 
 mbed_set_post_build(app)
