--- a/robot-bridge/CMakeLists.txt
+++ b/robot-bridge/CMakeLists.txt
@@ -138,6 +138,22 @@ target_link_libraries(PS4_RX PRIVATE
   mbed-os
 )
 
+
+#
+# ikako_rohm_md
+#
+add_library(ikako_rohm_md OBJECT)
+target_include_directories(ikako_rohm_md PUBLIC
+  ./ikako_rohm_md
+)
+target_sources(ikako_rohm_md PRIVATE
+  ikako_rohm_md/rohm_md.cpp
+)
+target_link_libraries(ikako_rohm_md PRIVATE
+  mbed-os
+  ikarashiCAN_mk2
+)
+
 project(ControllerSTM32)
 
 add_subdirectory(src)
