Update: some thing that relates cp210x

--- a/controller-stm32/CMakeLists.txt
+++ b/controller-stm32/CMakeLists.txt
@@ -11,7 +11,7 @@ add_subdirectory(syoch-robotics)
 #
 # ikako_c620
 #
-add_library(ikako_c620 STATIC)
+add_library(ikako_c620 OBJECT)
 target_include_directories(ikako_c620 PUBLIC
   ./ikako_c620
 )
@@ -25,7 +25,7 @@ target_link_libraries(ikako_c620 PRIVATE
 #
 # bno055
 #
-add_library(bno055 STATIC)
+add_library(bno055 OBJECT)
 target_include_directories(bno055 PUBLIC
   ./bno055
 )
@@ -39,7 +39,7 @@ target_link_libraries(bno055 PRIVATE
 #
 # ikarashiCAN_mk2
 #
-add_library(ikarashiCAN_mk2 STATIC)
+add_library(ikarashiCAN_mk2 OBJECT)
 target_include_directories(ikarashiCAN_mk2 PUBLIC
   ./ikarashiCAN_mk2
   ./ikarashiCAN_mk2/NoMutexCAN-master
@@ -54,7 +54,7 @@ target_link_libraries(ikarashiCAN_mk2 PRIVATE
 #
 # ikakoMDC
 #
-add_library(ikakoMDC STATIC)
+add_library(ikakoMDC OBJECT)
 target_include_directories(ikakoMDC PUBLIC
   ./ikakoMDC
   ./ikakoMDC/lpf
@@ -73,7 +73,7 @@ target_link_libraries(ikakoMDC PRIVATE
 #
 # USBHost
 #
-# add_library(USBHost STATIC)
+# add_library(USBHost OBJECT)
 # target_include_directories(USBHost PUBLIC
 #   ./USBHost/USBHost
 #   ./USBHost/USBHostHID
