Update: Extracted memory allocation/free functions to __syoch_xxx

--- a/controller-stm32/src/wrapper/CMakeLists.txt
+++ b/controller-stm32/src/wrapper/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(wrapper STATIC)
+add_library(wrapper OBJECT)
 target_include_directories(wrapper PUBLIC
   inc
 )
-target_sources(wrapper PRIVATE
+target_sources(wrapper PUBLIC
   src/wrapper.cpp
 )
 target_link_libraries(wrapper PRIVATE
