--- a/connection-test/src/app/CMakeLists.txt
+++ b/connection-test/src/app/CMakeLists.txt
@@ -4,7 +4,9 @@ target_sources(app PRIVATE
 )
 
 target_link_libraries(app PRIVATE
-  mbed-os syoch-robotics ikarashiCAN_mk2 MotorController IkakoRobomas ikarashiCAN_mk2 can_servo
+  app_rs
+  mbed-os syoch-robotics
+  ikarashiCAN_mk2 MotorController IkakoRobomas ikarashiCAN_mk2 can_servo
 )
 
 mbed_set_post_build(app)
