--- a/common_libs/nhk2023-b/CMakeLists.txt
+++ b/common_libs/nhk2023-b/CMakeLists.txt
@@ -1,17 +1,28 @@
 add_custom_command(
-  OUTPUT "${CMAKE_BINARY_DIR}/libnhk2024b.a"
+  OUTPUT "${CMAKE_BINARY_DIR}/libnhk2024b_rs.a"
   COMMAND /home/vscode/.cargo/bin/cargo build
-  COMMAND cp target/thumbv7em-none-eabi/debug/libnhk2024b.a "${CMAKE_BINARY_DIR}/libnhk2024b.a"
+  COMMAND cp target/thumbv7em-none-eabi/debug/libnhk2024b_rs.a "${CMAKE_BINARY_DIR}/libnhk2024b_rs.a"
   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
-add_custom_target(nhk2024b_rs_target DEPENDS "${CMAKE_BINARY_DIR}/libnhk2024b.a")
+add_custom_target(NHK2024BRsLib_Target DEPENDS "${CMAKE_BINARY_DIR}/libnhk2024b_rs.a")
 
-add_library(nhk2024b_rs STATIC IMPORTED GLOBAL)
-add_dependencies(nhk2024b_rs nhk2024b_rs_target)
-set_target_properties(nhk2024b_rs
+add_library(NHK2024BRsLib STATIC IMPORTED GLOBAL)
+add_dependencies(NHK2024BRsLib NHK2024BRsLib_Target)
+set_target_properties(NHK2024BRsLib
     PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/libnhk2024b.a"
+    IMPORTED_LOCATION "${CMAKE_BINARY_DIR}/libnhk2024b_rs.a"
+)
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../common_libs/srobo_base $(CMAKE_CURRENT_BINARY_DIR)/srobo_base)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../common_libs/im920_rs $(CMAKE_CURRENT_BINARY_DIR)/im920_rs)
+
+add_library(NHK2024BRuntime STATIC
+  cxx/mem.cpp
+)
+
+target_include_directories(NHK2024BRuntime PRIVATE
+  ./inc
 )
 
 add_library(NHK2024B STATIC)
@@ -20,6 +31,7 @@ target_include_directories(NHK2024B PUBLIC
 )
 target_sources(NHK2024B PRIVATE)
 target_link_libraries(NHK2024B PUBLIC
-  mbed-os PS4_RX nhk2024b_rs
+  srobo_base_hxx im920_rs_hxx NHK2024BRsLib NHK2024BRuntime
+  mbed-os PS4_RX syoch-robotics
 )
 
