--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .fep
 */BUILD
 */build
+build/CMakeCache.txt
+build/.cmake/api/v1/query/client-vscode/query.json
+build/CMakeFiles/cmake.check_cache
