Update: Fixed FEP Controller

--- a/common_libs/nhk2023-b/CMakeLists.txt
+++ b/common_libs/nhk2023-b/CMakeLists.txt
@@ -18,12 +18,14 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../common_libs/srobo_base $(CMAK
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../common_libs/im920_rs $(CMAKE_CURRENT_BINARY_DIR)/im920_rs)
 
 add_library(NHK2024BRuntime STATIC
-  cxx/mem.cpp
+  cxx/mem.cpp cxx/logger.cpp
 )
 
 target_include_directories(NHK2024BRuntime PRIVATE
   ./inc
 )
+
+target_link_libraries(NHK2024BRuntime PUBLIC syoch-robotics)
 
 add_library(NHK2024B STATIC)
 target_include_directories(NHK2024B PUBLIC
