--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@ url = git@github.com:nnctroboticsclub/PS4_RX.git
 [submodule "common_libs/im920_rs"]
 	path = common_libs/im920_rs
 	url = git@github.com:nnctroboticsclub/im920_rs
+[submodule "common_libs/ArduinoUsbHostShield"]
+	path = common_libs/ArduinoUsbHostShield
+	url = https://github.com/nnctroboticsclub/ArduinoUsbHostShield.git
